<resources>
    <string name="app_name">Online Store</string>
    <string name="intro_title">Welcome to <font color="#39c7a5">Online Store</font>\nYour <font color="#39c7a5">Gateway</font> to Cutting-Edge Tech</string>
    <string name="intro_sub_title">Sign in to explore a vast selection of cutting-edge\n digital products.
    Don’t have an account?\n Register now for a seamless and secure shopping experience.</string>
    <string name="image_desc">This is the Image Description</string>
    <string name="signing">Already have an account? <font color="#39c7a5">Sign In</font></string>
    <string name="let_s_get_started">Let\'s get Started</string>
    <string name="start_with_gmail">Continue With Gmail</string>
    <string name="recommendation">Recommendation</string>
    <string name="see_all">See all</string>
    <string name="categories">Categories</string>
    <string name="welcome">Welcome to</string>
    <string name="name">Vivek</string>
    <string name="profile">Profile</string>
    <string name="my_order">My Order</string>
    <string name="explorer">Explorer</string>
    <string name="cart">My Cart</string>
    <string name="empty_cart">Your Cart is Empty</string>
    <string name="favorite">Favorite</string>
    <string name="title">Title</string>
    <string name="rate">4.5</string>
    <string name="price">$0</string>
    <string name="select_model">Select Model</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="total_tax">Total Tax</string>
    <string name="total">Total</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash">Cash</string>
    <string name="cash_desc">Pay Cash only when your Item is arrived at your destination point.</string>
    <string name="bank">Bank Transfer</string>
    <string name="bank_desc">Login to your Bank Account and make the payment. or you can pay via G-Pay</string>
    <string name="checkout">Check Out</string>
    <string name="dont_have_account">Don\'t have account? <font color="#39c7a5">Continue</font></string>
    <string name="default_web_client_id" translatable="false">314812134896-6q722oluhb0bk4s7poqh27jgfjineqpj.apps.googleusercontent.com</string>
    <string name="google_web_client_id">135422342342-ms0em9kvomd4qjmi0vh86kko94ekku25.apps.googleusercontent.com</string>

</resources>