<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.WelcomeActivity">

    <ScrollView
        android:id="@+id/contentPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:minHeight="350dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_desc"
                android:src="@drawable/intro_img" />

            <TextView
                android:id="@+id/intro_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/intro_title"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:lineSpacingExtra="8dp"
                android:text="@string/intro_sub_title"
                android:textAlignment="center"
                android:textColor="@color/dark_grey" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/startBtn"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:background="@drawable/bg_round"
                android:text="@string/let_s_get_started"
                android:textColor="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/google_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_with_gmail"
                android:textAllCaps="false"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:shadowColor="@color/black"
                android:backgroundTint="@color/white"
                android:padding="14dp"
                android:layout_marginHorizontal="32dp"
                app:strokeColor="@color/black"
                app:icon="@drawable/ic_google"
                app:iconTint="@color/design_default_color_background"
                app:iconTintMode="multiply"
                app:iconGravity="textStart"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/splash_screen_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <include
            android:id="@+id/splash_layout"
            layout="@layout/layout_splash" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>